...
            type="com.artelsv.petprojectsecond.ui.movielist.MovieListViewModel" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:id="@+id/fl_movie_list_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main"
            android:layout_width="match_parent"
...
            <!--                android:text="@string/movies_list_sort"-->
            <!--                app:layout_constraintBottom_toBottomOf="@id/tv_now_playing"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="@id/tv_now_playing" />-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_now_playing"
                adapterMovie="@{viewModel.popularAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/tiny_margin"
                android:nestedScrollingEnabled="true"
...
