...
        <import type="android.view.View" />

        <import type="com.artelsv.petprojectsecond.utils.EmptyChecker" />
    </data>

    <FrameLayout
        android:id="@+id/fl_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
